apps/tachtit/suwayomi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: suwayomi
  labels:
    app.kubernetes.io/component: monitoring
