apps/tachtit/suwayomi/authentik-outpost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-outpost-suwayomi
  namespace: suwayomi
  labels:
    app: authentik-outpost-suwayomi
    app.kubernetes.io/name: authentik-outpost-suwayomi
    app.kubernetes.io/instance: suwayomi
    app.kubernetes.io/component: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-outpost-suwayomi
  template:
    metadata:
      labels:
        app: authentik-outpost-suwayomi
        app.kubernetes.io/name: authentik-outpost-suwayomi
        app.kubernetes.io/instance: suwayomi
        app.kubernetes.io/component: proxy
        policy-type: "app"
    spec:
      containers:
        - name: outpost
          image: ghcr.io/goauthentik/proxy:2025.10.3
          volumeMounts:
            - name: sessions
              mountPath: /dev/shm
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: https
              containerPort: 9443
              protocol: TCP
            - name: metrics
              containerPort: 9300
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /outpost.goauthentik.io/ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /outpost.goauthentik.io/ping
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
      volumes:
        - name: sessions
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-outpost-suwayomi
  namespace: suwayomi
  labels:
    app: authentik-outpost-suwayomi
    app.kubernetes.io/name: authentik-outpost-suwayomi
    app.kubernetes.io/instance: suwayomi
    app.kubernetes.io/component: proxy
spec:
  selector:
    app: authentik-outpost-suwayomi
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: http
      port: 9000
      targetPort: http
      protocol: TCP
    - name: https
      port: 9443
      targetPort: https
      protocol: TCP
    - name: metrics
      port: 9300
      targetPort: metrics
      protocol: TCP
