apps/tachtit/suwayomi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: suwayomi
  namespace: suwayomi
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
  hostnames:
    - suwayomi.seyzahl.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io/
      backendRefs:
        - name: authentik-outpost-suwayomi
          port: 9000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-outpost-suwayomi
          port: 9000
